--- a/RegestrierungsMaske.html
+++ b/RegestrierungsMaske.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="RegestrierungsmaskeDesign.css">
+    <link rel="stylesheet" type="text/css" href="NachrichtenDesign.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Orbitron&family=Press+Start+2P&family=Righteous&display=swap" rel="stylesheet">
 
 
@@ -17,11 +17,11 @@
             <h3 id="navigationsüberschrift">Navigation</h3>
         </p>
         <form>
-            <p><a class="Navigationsbuttons" href="file:\\\C:\Users\SamueleTortomasi\Dropbox\Semester4\SE2\se2-praktikum\Nachrichtenliste.html">Nachrichten</a><br>
+            <p><a class="Navigationsbuttons" href="Nachrichtenliste.html">Nachrichten</a><br>
             </p>
-            <p> <a class="Navigationsbuttons" href="file:\\\C:\Users\SamueleTortomasi\Dropbox\Semester4\SE2\se2-praktikum\Neuenachricht.html">Neue Nachricht</a><br>
+            <p> <a class="Navigationsbuttons" href="Neuenachricht.html">Neue Nachricht</a><br>
             </p>
-            <p> <a class="Navigationsbuttons" href="file:\\\C:\Users\SamueleTortomasi\Dropbox\Semester4\SE2\se2-praktikum\RegestrierungsMaske.html">Regestrierung</a><br>
+            <p> <a class="Navigationsbuttons" href="RegestrierungsMaske.html">Regestrierung</a><br>
             </p>
             </from>
 
@@ -50,8 +50,6 @@
             <input type="submit" name="button" />
             </from>
     </div>
-
-    <div>Fusszeile</div>
 
 
 
